--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
-  "name": "root",
+  "name": "monorepo-lib",
   "private": true,
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ]
+  },
   "devDependencies": {
     "lerna": "^4.0.0"
   }
