--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
       "packages/*"
     ]
   },
+  "scripts": {
+    "build": "lerna run build"
+  },
   "devDependencies": {
     "lerna": "^4.0.0"
   }
